Fix SplitButton spacing issue between icon and text. Resolves #1639

--- a/Radzen.Blazor/themes/components/blazor/_splitbutton.scss
+++ b/Radzen.Blazor/themes/components/blazor/_splitbutton.scss
@@ -58,6 +58,7 @@ $splitbutton-sizes: xs, sm, md, lg;
   .rz-menuitem-icon {
     @extend %rzi;
     vertical-align: top;
+    margin-inline: var(--rz-menu-item-icon-margin-inline);
   }
 }
 
